--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "canvas2image": "^1.0.5",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.3.8",
     "html2canvas": "^1.4.1",
     "mobx": "^6.12.3",
     "mobx-react-lite": "^4.0.7",
@@ -23,6 +24,7 @@
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-html2canvas": "^1.0.1",
+    "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.11"
