--- a/package.json
+++ b/package.json
@@ -15,25 +15,33 @@
     "antd": "^5.18.3",
     "axios": "^1.7.2",
     "canvas2image": "^1.0.5",
+    "docx": "^8.5.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.3.8",
     "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "mobx": "^6.12.3",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-html2canvas": "^1.0.1",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.7",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/antd": "^1.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.66",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.22",
+    "@types/react-highlight-words": "^0.20.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
