--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.18.3",
     "axios": "^1.7.2",
     "canvas2image": "^1.0.5",
+    "dayjs": "^1.11.12",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.3.8",
@@ -23,6 +24,7 @@
     "jspdf-autotable": "^3.8.2",
     "mobx": "^6.12.3",
     "mobx-react-lite": "^4.0.7",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^7.1.0",
