--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
+    "@mui/styled-engine": "^5.16.6",
     "@tanstack/react-query": "^5.40.1",
     "@types/react-datepicker": "^6.2.0",
     "antd": "^5.18.3",
